--- a/packages/app-standalone/style/main.less
+++ b/packages/app-standalone/style/main.less
@@ -3,7 +3,90 @@
 // @import "~@phosphor/default-theme/style/index.css";
 
 @import "./jupyter-vars.css";
+@import "./jupyter-var-overrides.css";
+@import "./light-theme.less";
+
 @import "~@mavenomics/help/style/index.css";
+@import "~@jupyterlab/application/style/index.css";
+@import "~@jupyterlab/codeeditor/style/index.css";
+@import "~@jupyterlab/codemirror/style/index.css";
+@import "~@jupyterlab/docregistry/style/index.css";
+@import "~@jupyterlab/rendermime/style/index.css";
+
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+
+@import "~@mavenomics/ui/style/index.css";
+@import "~@mavenomics/chart-parts/style/index.css";
+@import "~@mavenomics/default-parts/style/index.css";
+@import "~@mavenomics/layout/style/index.css";
+@import "~@mavenomics/parts/style/index.css";
+@import "~@mavenomics/dashboard-devtools/style/index.css";
+
+.m-RenderedLayout {
+    min-height: 500px;
+    width: 100%;
+}
+
+
+/* Color is MD-500 Light Blue
+ * Inspired by a false color image of polar auras on Jupiter,
+ * showing influence from three of it's many moons:
+ * https://www.jpl.nasa.gov/spaceimages/details.php?id=PIA03155 */
+ .m-PanelIcon {
+    font-size: 14px;
+    line-height: 24px;
+    color: var(--md-light-blue-500);
+}
+
+.m-FileIcon {
+    font-size: 18px;
+    color: var(--md-light-blue-500);
+    width: 20px;
+    height: 17px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.jp-mod-selected > .m-FileIcon {
+    color: var(--md-grey-50);
+}
+
+.jp-mod-running > .m-FileIcon {
+    position: relative;
+    left: -4px; // adjust for the running icon
+}
+
+.jp-mod-running > .m-FileIcon::before {
+    /* The !important is needed to reliably override the file picker styles
+     * -4px = super - 2
+     * -6px = super + 2 (also expressed as super[bottom] - 2) */
+    left: -4px !important;
+    top: -6px !important;
+}
+
+.m-LauncherIcon::after {
+    font-size: 52px;
+    color: var(--md-light-blue-500);
+}
+
+.m-LauncherIcon.m-Icon-Dashboard::after {
+    content: "dashboard";
+}
+
+.m-LauncherIcon.m-Icon-Part::after {
+    content: "insert_chart";
+}
+
+/* Blueprint override override override (...override?) */
+.jp-ToolbarButton>.fa.minimal {
+    color: black !important; // the override override uses !important so we must too
+    // css is evillll
+    padding: 0px 6px !important; // ditto
+}
+
+.jp-MainAreaWidget.m-DashboardEditor .jp-ToolbarButtonComponent .jp-ToolbarButtonComponent-label {
+    display: none;
+}
 
 body {
     padding: 0;
