--- a/packages/apheleia/style/index.scss
+++ b/packages/apheleia/style/index.scss
@@ -1,6 +1,9 @@
 // Import Roboto and Big Shoulders Display 300
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@300&family=Roboto&display=swap');
 
+// Import Material Design fonts
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
 body {
     //#region Font variables
     --aph-text-font: Roboto;
