Fix Part Styling

--- a/packages/apheleia/src/components/part/_part.scss
+++ b/packages/apheleia/src/components/part/_part.scss
@@ -1,6 +1,8 @@
 .aph-layoutpart {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    width: 100%;
 
     .aph-titlebar {
         flex-basis: auto;
