--- a/packages/apheleia/src/components/stack/_stack.scss
+++ b/packages/apheleia/src/components/stack/_stack.scss
@@ -1,6 +1,8 @@
 .aph-stackpanel {
     display: flex;
     overflow: hidden;
+    height: 100%;
+    width: 100%;
 
     &.horizontal {
         flex-direction: row;
